2007.03.07: David Nichols
	* changed conversion of mysql decimal type to string from int to avoid a
	  loss of precision and to be consistent with other DBI drivers
	* implemented support for retrieving binary types in mysql
	* extensive DBI driver doc updates

2007.03.06: David Nichols
	* updated pgsql driver to query server to determine binary data types
	  for each connection (set has_interval_day and has_integer_datetimes)
	* updated documentation for pgsql module

2007.03.05: David Nichols
	* fixed auto locking and lock list handling
	* more deadlock detection improvements and global thread-resource 
	  tracking for thread locks
	* updated the Counter class to allow initialization of the starting 
	  value of the counter in the constructor (default = 0)

2007.03.04: David Nichols
	* implemented new deadlock-detection framework for all internal locking
	  each thread has a VLock object that tracks locks held; before a 
	  thread blocks, it checks the thread holding the lock if it's waiting
	  on a lock that the current thread is already holding; if so, there
	  a THREAD-DEADLOCK exception is raised
	* applied deadlock detection to Mutex, VRMutex, and Condition classes
	* added SafeLocker class as a helper class for exception-safe unlocking 
	  within a block
	* throw an exception in Mutex::destructor() if it's destroyed while
	  locked

2007.03.02: David Nichols
	* added Datasource::vselect() and Datasource::vselectRows() methods
	* fixed configure script for mysql (only succeed if matching libs and
	  include files are found)
	* fixed configure for sybase
	* added pgsql module for PostgreSQL database access
	* fixed configure for pcre (only succeed if matching libs and include
	  files are found, do not abort until all possibilities are checked)

2007.02.22: David Nichols
	* implemented new extensible DBI-driver registration
	* implemented SafeLocker class to avoid locking errors
	* fixed dangerous implementation of QoreString::clear()
